--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,14 +1,18 @@
 {
   "$schema": "https://deno.land/x/deno/cli/schemas/config-file.v1.json",
-  "name": "<% JSR_NAME %>",
+  "name": "@erictaylor/csp",
   "license": "MIT",
   "version": "0.0.1",
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "@std/random": "jsr:@std/random@^0.1.0"
   },
   "exports": {
     ".": "./src/mod.ts",
-    "./math": "./src/math.ts"
+    "./config": "./src/config.ts",
+    "./directive": "./src/directive.ts",
+    "./policy": "./src/policy.ts",
+    "./value": "./src/value.ts"
   },
   "publish": {
     "include": [
@@ -49,6 +53,7 @@
     "noImplicitReturns": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "verbatimModuleSyntax": true
   }
 }
