--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,6 +10,7 @@
   "exports": {
     ".": "./src/mod.ts",
     "./config": "./src/config.ts",
+    "./constants": "./src/constants.ts",
     "./directive": "./src/directive.ts",
     "./policy": "./src/policy.ts",
     "./value": "./src/value.ts"
