--- a/deno.jsonc
+++ b/deno.jsonc
@@ -54,7 +54,6 @@
     "noImplicitReturns": true,
     "noUncheckedIndexedAccess": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "verbatimModuleSyntax": true
+    "noUnusedParameters": true
   }
 }
